@@ -65,7 +65,6 @@
             <version>5.8.2</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -76,41 +75,6 @@
                     <source>17</source>
                     <target>17</target>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <executions>
-                    <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                        <configuration>
-                            <!-- INSERIRE QUI LA PATH AL JDK -->
-                            <executable>C:\Users\Tyrell Wellick\.jdks\openjdk-17.0.2\bin\java</executable>
-                            <options>
-                                <option>--add-exports javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
-                                <option>--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
-                                <option>--add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
-                                <option>--add-exports javafx.base/com.sun.javafx.binding=com.jfoenix</option>
-                                <option>--add-exports javafx.base/com.sun.javafx.event=com.jfoenix</option>
-                                <option>--add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
-                                <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
-                                <option>--add-exports javafx.base/com.sun.javafx.runtime=org.controlsfx.controls</option>
-                                <option>--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</option>
-                                <option>--add-exports javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls</option>
-                                <option>--add-exports javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
-                            </options>
-                            <mainClass>it.unipv.po.aioobe.trenissimo/it.unipv.po.aioobe.trenissimo.view.Splashscreen</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
